# BlenderGitManager

./: .gitignore  README.md  VALIDATION_REPORT.txt  build_extension.py  pyproject.toml
blender_git_manager/: README.md  __init__.py  blender_manifest.toml  constants.py  preferences.py  properties.py  state_sync.py
blender_git_manager/models/: __init__.py  domain.py  history.py
blender_git_manager/operators/: __init__.py  authentication.py  base.py  branches.py  commits.py  common.py  history.py  history_actions.py  history_interaction.py  history_runtime.py  lfs.py  repository.py  staging.py  synchronization.py
blender_git_manager/services/: __init__.py  background_task_service.py  credential_service.py  git_service.py  github_service.py  graph_layout_service.py  history_diff_parser.py  history_parser.py  history_service.py  lfs_push_failures.py  lfs_service.py  (+3 more)
docs/: ARCHITECTURE.md  FILE_REFERENCE.md  ORIGINAL_REQUIREMENTS.md  REQUIREMENTS_MATRIX.md  ROADMAP.md
tests/: blender_branch_reload_smoke.py  blender_commit_checkout_smoke.py  blender_detached_branch_smoke.py  blender_history_graph_smoke.py  blender_history_runtime_hardening_smoke.py  blender_history_ui_smoke.py  test_background_task_service.py  test_branch_reload.py  test_commit_checkout.py  test_formatting.py  test_git_history_graph.py  test_git_integration.py  test_github_service.py  test_graph_layout_service.py  test_history_diff_parser.py  test_history_parser.py  test_history_service.py  test_lfs_push_recovery.py  test_parsers.py  test_process_service.py  test_quick_save.py  test_validation.py
(+13 files in other folders)
