[project]
name = "blender-git-manager"
version = "0.1.4"
description = "Visual Git, Git LFS and GitHub workflows inside Blender"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
reportMissingImports = false
